--- a/contatti.html
+++ b/contatti.html
@@ -70,7 +70,7 @@
                             <a href="chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo aziendale</a>
                             <a href="business.html" class="list-group-item"><i class="md md-insert-chart"></i> Business</a>
                             <a href="tof.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
-                            <a href="sicurezza.html" class="list-group-item list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
+                            <a href="sicurezza.html" class="list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
                             <a href="contatti.html" class="list-group-item heading list-group-item-success"><i class="md md-email"></i> Contatti</a>
                         </div>
 
@@ -116,6 +116,8 @@
                             <input type="submit" name="submit" id="submit" value="Invia" class="btn btn-info pull-right">
                         </form>
                     </div>
+
+                    <!-- ===== TAG SOCIALI  =====-->
                     <div class="col-md-3">
                         <address>
                             <h3>Dove ci trovi?</h3>
@@ -128,29 +130,30 @@
                 </div>
             </div>
         </div>
+
+
+        <!-- FOOTER -->
+
+        <div id="footer"></div>
+
+        <!-- Bootstrap Javascript Core-->
+
+        <script src="js/bootstrap.min.js"></script>
+        <!-- <script src="js/docs.min.js"></script> -->
+
+        <!-- scripts parts -->
+
+        <script>
+            $("#navbar").load("navbar.html");
+        </script>
+        <script>
+            $("#footer").load("footer.html");
+        </script>
+        <script>
+            $("#sidebar").load("sidebar.html");
+        </script>
+
     </div>
-    <!-- FOOTER -->
-
-    <div id="footer"></div>
-
-    <!-- Bootstrap Javascript Core-->
-
-    <script src="js/bootstrap.min.js"></script>
-    <!-- <script src="js/docs.min.js"></script> -->
-
-    <!-- scripts parts -->
-
-    <script>
-        $("#navbar").load("navbar.html");
-    </script>
-    <script>
-        $("#footer").load("footer.html");
-    </script>
-    <script>
-        $("#sidebar").load("sidebar.html");
-    </script>
-
-
 </body>
 
 </html>
