--- a/ricerca.html
+++ b/ricerca.html
@@ -45,40 +45,44 @@
 
             <!-- PATH ROW -->
 
-            <div class="row col-lg-12">
-                <ol class="breadcrumb" id="path">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">Ricerca</li>
-                </ol>
+            <div class="row">
+                <div class="col-lg-12">
+                    <ol class="breadcrumb" id="path">
+                        <li><a href="index.html">Home</a>
+                        </li>
+                        <li class="active">Ricerca</li>
+                    </ol>
+                </div>
             </div>
 
             <!-- search bar row -->
-            <div class="row col-lg-12">
+            <div class="row">
+                <div class="col-lg-12">
 
-                <div class="form-group col-lg-3 col-md-3 col-sm-4" style="padding-left: 0px; margin-left: 0px; padding-right: 0px; margin-right: 0px;">
-                    <div class="input-group">
-                        <span class="input-group-addon">Cerca in</span>
-                        <select class="form-control search-select">
-                            <option>-- Tutto il sito --</option>
-                            <option>Blog</option>
-                            <option>Offerte</option>
-                            <option>Recensioni</option>
-                        </select>
+                    <div class="form-group col-lg-3 col-md-3 col-sm-4" style="padding-left: 0px; margin-left: 0px; padding-right: 0px; margin-right: 0px;">
+                        <div class="input-group">
+                            <span class="input-group-addon">Cerca in</span>
+                            <select class="form-control search-select">
+                                <option>-- Tutto il sito --</option>
+                                <option>Blog</option>
+                                <option>Offerte</option>
+                                <option>Recensioni</option>
+                            </select>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group col-lg-9 col-md-9 col-sm-8" style="padding-left: 0px; margin-left: 0px; padding-right: 0px; margin-right: 0px;">
-                    <div class="input-group ">
-                        <input type="search" class="form-control search-input" placeholder="Cosa stai cercando?" value="escursioni" />
-                        <span class="input-group-btn ">
-                        <button class="btn btn-default">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </span>
+                    <div class="form-group col-lg-9 col-md-9 col-sm-8" style="padding-left: 0px; margin-left: 0px; padding-right: 0px; margin-right: 0px;">
+                        <div class="input-group ">
+                            <input type="search" class="form-control search-input" placeholder="Cosa stai cercando?" value="escursioni" />
+                            <span class="input-group-btn ">
+                            <button class="btn btn-default">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </span>
+                        </div>
                     </div>
-                </div>
 
+                </div>
             </div>
 
             <!-- results -->
